feat: copy and header updates

--- a/src/styles/components/index.scss
+++ b/src/styles/components/index.scss
@@ -1,6 +1,7 @@
 @use "./buttons";
-@use "./icons.scss";
+@use "./header";
 @use "./loader";
+@use "./icons";
 @use "./libraryItem";
 @use "./nav";
 @use "./playlistItem";
