--- a/src/styles/components/nav.scss
+++ b/src/styles/components/nav.scss
@@ -120,6 +120,9 @@
     top: 0;
     right: 0;
 
+    background: rgba(255, 255, 255, 0.01);
+    border-radius: 10px;
+
     label {
       position: relative;
       top: 0;
@@ -135,10 +138,10 @@
         position: relative;
         top: 0;
         height: 12px;
-        background-color: var(--spotifyCharcoal);
+        background-color: white;
         margin-bottom: 12px;
         transition: var(--defaultTransition);
-        border-radius: 2px;
+        border-radius: 5px;
 
         &:first-child {
           transform-origin: 0;
