--- a/src/styles/components/buttons.scss
+++ b/src/styles/components/buttons.scss
@@ -12,6 +12,7 @@
 
     font-size: 0.8rem;
     font-weight: 600;
+    line-height: normal;
     letter-spacing: 0.5px;
     text-decoration: none;
     text-align: center;
