feat: some styling updates and adding Spotify attribution

--- a/src/styles/components/index.scss
+++ b/src/styles/components/index.scss
@@ -1,3 +1,4 @@
+@use "./attributionBar";
 @use "./buttons";
 @use "./header";
 @use "./loader";
@@ -5,3 +6,4 @@
 @use "./libraryItem";
 @use "./nav";
 @use "./playlistItem";
+@use "./spotifyLogo";
