--- a/src/styles/components/libraryItem.scss
+++ b/src/styles/components/libraryItem.scss
@@ -15,10 +15,12 @@
     &-title {
       margin: 0;
       font-weight: 600;
+      text-align: left;
     }
 
     &-subtitle {
       margin: 0;
+      text-align: left;
     }
   }
 }
