--- a/src/styles/components/icons.scss
+++ b/src/styles/components/icons.scss
@@ -101,4 +101,31 @@
       }
     }
   }
+
+  &_spotify-logo {
+    margin: 0 5px;
+    width: 70px;
+    fill: white;
+    vertical-align: middle;
+
+    path {
+      stroke-width: 0px;
+    }
+  }
+
+  &_external-link {
+    width: 1rem;
+    height: 1rem;
+
+    path {
+      transition: var(--defaultTransition);
+      stroke: var(--spotifyGreen);
+    }
+
+    &:hover {
+      path {
+        stroke: white;
+      }
+    }
+  }
 }
